[PAY-848] Fix UploadChip spacing (#2729)

--- a/packages/web/src/pages/profile-page/components/desktop/ProfilePage.module.css
+++ b/packages/web/src/pages/profile-page/components/desktop/ProfilePage.module.css
@@ -274,3 +274,9 @@
 .tipAudioButtonContainer {
   margin-top: 32px;
 }
+
+.profileBottomSection {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
